tests/ui/borrowck/mutable-borrow-behind-reference-61623.stderr
error[E0596]: cannot borrow `*x.1` as mutable, as it is behind a `&` reference
  --> $DIR/mutable-borrow-behind-reference-61623.rs:7:19
   |
LL |     f2(|| x.0, f1(x.1))
   |                   ^^^ `x` is a `&` reference, so it cannot be borrowed as mutable
   |
help: consider changing this to be a mutable reference
   |
LL | fn f3<'a>(x: &'a mut ((), &'a mut ())) {
   |                  +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
